--- a/src/app/residences/residences/residences.component.html
+++ b/src/app/residences/residences/residences.component.html
@@ -1,13 +1,36 @@
 <div class="container">
+  <input type="search" [(ngModel)]="searchItem">
     <div class="row">
-      <div class="col-md-4"style="margin-bottom: 20px" *ngFor="let item of listResidences">
+      <div class="col-md-4"style="margin-bottom: 20px" *ngFor="let item of filteredResidences()"  >
+        
+
         <div class="card" style="width: 18rem">
           <img class="card-img-top" [src]="item.image" alt="no" />
           <div class="card-body">
-            <h5 class="card-title">{{item.name}}</h5>
+            <h5 class="card-title">{{item.name | uppercase}}</h5>
+          </div>
+          <div> <button class="btn btn-success" (click)="showLocation(item)">Show Location</button>
+            <button class="btn btn-success" [routerLink]="['rdetails', item.id]">Sow details</button>
+          <span *ngIf="visbility && item.name===N">{{item.address}}</span>
+          </div>
+          <div [ngSwitch]="item.status">
+            <div *ngSwitchCase="'Disponible'">
+              <span >👍{{item.status}}</span>
+            </div>
+            <div *ngSwitchCase="'En Construction'">
+              <span> 🏗️ {{item.status}}</span>
+            </div>
+            <div *ngSwitchDefault>
+              <span> 🚫 {{item.status}}</span>
+            </div>
+            <button class="btn" (click)="addFoavoris(item)">👍</button>
           </div>
         </div>
+      
       </div>
+      
     </div>
 </div>
+<button routerLink="/addResidence">Add residence</button>
+<router-outlet></router-outlet>
 
